# smartllm-router

./: .env.example  .gitignore  CONTACT.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  SETUP.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_basic_functionality.py  test_final_cost_savings.py  test_real_api.py  test_real_openai_only.py  test_real_world_use_cases.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CASE_STUDIES.md  INTEGRATION.md
examples/: basic_usage.py  demo_app.py
smartllm_router/: __init__.py  analyzer.py  benchmark.py  dashboard.py  router.py  rules.py  selector.py  tracker.py
tests/: __init__.py  test_basic.py  test_performance.py  test_router.py
